@@ -50,8 +50,6 @@ public:
 	bool colorkeyChanged() { return colorkey_changed; };
 #endif
 
-	bool proxyChanged() { return proxy_changed; };
-
 protected:
 	virtual void createHelp();
 
@@ -113,25 +111,6 @@ protected:
     void setMplayerLogName(QString filter);
     QString mplayerLogName();
 
-	// Proxy
-	void setUseProxy(bool b);
-	bool useProxy();
-
-	void setProxyHostname(QString host);
-	QString proxyHostname();
-
-	void setProxyPort(int port);
-	int proxyPort();
-
-	void setProxyUsername(QString username);
-	QString proxyUsername();
-
-	void setProxyPassword(QString password);
-	QString proxyPassword();
-
-	void setProxyType(int type);
-	int proxyType();
-
 protected:
 	virtual void retranslateStrings();
 
@@ -146,7 +125,6 @@ private:
 #if USE_COLORKEY
 	bool colorkey_changed;
 #endif
-	bool proxy_changed;
 };
 
 #endif
